--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -52,8 +52,8 @@ $dark-orange: #ef590e;
 $max-width-mob: 620px;
 $max-width: 1280px;
 
-$font-stack-Helvetica: 'HelveticaNeue', Arial, sans-serif;
-$font-stack-OpenSans: 'OpenSans', sans-serif;
+$font-stack-Helvetica: 'HelveticaNeue', Helvetica, Arial, sans-serif;
+$font-stack-OpenSans: 'OpenSans', Arial, sans-serif;
 
 $similar-goods-title-font-size: 21px;
 $similar-goods-title-font-size-mob: 18px;
