--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -320,7 +320,7 @@
 		width: $pick-size-width;
 		height: $pick-size-height;
 		margin-right: 7px;
-		padding: 8px 10px;
+		padding: 8px 9px;
 		border: 1px solid $pick-size-border-color;
 
 		color: $primary-text-color;
@@ -337,6 +337,7 @@
 		}
 		&:hover {
 			border: 2px solid $black;
+			padding: 8px;
 
 			cursor: pointer;
 		}
