--- a/views/index.pug
+++ b/views/index.pug
@@ -8,44 +8,7 @@ html(lang="en")
 		link(rel="stylesheet", href="css/wallop.css")
 		link(rel="stylesheet", type= "text/css", href="css/style.css")
 	body
-		header(class="header")
-			div(class="header-logo", id="logo")
-				a(href="#") One CLub
-			div(class="shop")
-				a(href="#")
-					img(src="images/mob-shop-bag.png", alt="go shop", class="shop-img")
-			div(class="switcher")
-				a(href="#", class="switcher__item icon icon--clock")
-					span Акции
-				a(href="#", class="switcher__item")
-					span Каталог
-			div(class="contact-search")
-				div(class="contact")
-					a(href="tel: +380443590899", class="phone icon icon--phone icon--contact")
-						span(class="contact__link") +380 44 359-08-99
-						span Пн-Вс: 9:00-21:00
-					a(href="#", class="login icon icon--avatar icon--contact")
-						span(class="contact__link") Войти
-					a(href="#", class="basket icon icon--shopping-cart icon--contact")
-						span(class="contact__link") Корзина
-				form(action="#", class="search")
-					input(type="search", placeholder="Поиск...", class="search__input")
-					button(type="submit", class="search-icon")
-			nav(role="navigation")
-				div(class="menu-icon", data-toggle-menu)
-				ul(class="main-menu")
-					li
-						a(href="#", class="main-menu__item") Женщинам
-					li
-						a(href="#", class="main-menu__item") Мужчинам
-					li
-						a(href="#", class="main-menu__item") Детям
-					li
-						a(href="#", class="main-menu__item") Косметика
-					li
-						a(href="#", class="main-menu__item") Для дома
-					li
-						a(href="#", class="main-menu__item") Бренды
+		include header.pug
 		main(class="main")
 			nav(class="breadcrumbs")
 				a(href="#", class="breadcrumbs__item") Главная страница
@@ -59,24 +22,7 @@ html(lang="en")
 				div(class="time-left icon icon--clock")
 					span(class="time-left__text") До конца распродажи
 					span(class="time-left__time") 3 дня, 15:37:01
-				div(class="photo Wallop")
-					div(class="Wallop-list")
-						div(class="product__sale icon icon--clock")
-						div(class="Wallop-item Wallop-item--current")
-							img(src="images/photo1-min.jpg", alt="photo1", class="Wallop-item-img")
-						div(class="Wallop-item")
-							img(src="images/photo2-min.jpg", alt="photo2", class="Wallop-item-img")
-						div(class="Wallop-item")
-							img(src="images/photo3-min.jpg", alt="photo3", class="Wallop-item-img")
-						div(class="Wallop-item")
-							img(src="images/photo4-min.jpg", alt="photo4", class="Wallop-item-img")
-					div(class="Wallop-pagination")
-						button(class="Wallop-buttonPrevious")
-						div(class="Wallop-dot Wallop-dot--current Wallop-dot--1")
-						div(class="Wallop-dot Wallop-dot--2")
-						div(class="Wallop-dot Wallop-dot--3")
-						div(class="Wallop-dot Wallop-dot--4")
-						button(class="Wallop-buttonNext")
+				include slider.pug
 				div(class="description")
 					h1(class="product__title") Current Elliott
 						span(class="product__subtitle") Costa Patch Pocket Denim Top
@@ -275,41 +221,7 @@ html(lang="en")
 								a(href="tel: +380443934707") +380 44 393-47-07
 							span(class="location-text") Время работы: 10:00 - 21:00
 							a(href="#", class="location-link") Показать на карте
-		footer(class="footer")
-			nav(class="footer__main-menu")
-				span(class="footer__main-menu-item") Каталог
-				a(href="#", class="footer__main-menu-item") Женщинам
-				a(href="#", class="footer__main-menu-item") Мужчинам
-				a(href="#", class="footer__main-menu-item") Детям
-				a(href="#", class="footer__main-menu-item") Для дома
-				a(href="#", class="footer__main-menu-item") Бренды
-			nav(class="footer__buyer-menu")
-				span(class="footer__buyer-menu-item") Покупателям
-				a(href="#", class="footer__buyer-menu-item") Оплата
-				a(href="#", class="footer__buyer-menu-item") Возврат
-				a(href="#", class="footer__buyer-menu-item") Доставка
-				a(href="#", class="footer__buyer-menu-item") Оферта
-				a(href="#", class="footer__buyer-menu-item") Поддержка
-			nav(class="footer__about-menu")
-				span(class="footer__about-menu-item") О нас
-				a(href="#", class="footer__about-menu-item") О проекте
-				a(href="#", class="footer__about-menu-item") Вакансии
-				a(href="#", class="footer__about-menu-item") Партнерам
-				a(href="#", class="footer__about-menu-item") Контакты
-				a(href="#", class="footer__about-menu-item") FAQ
-			div(class="copy")
-				div(class="footer-logo")
-					a(href="#") One Club
-				span(class="copy-text") &copy; 2016 ONE CLUB 2.0
-				span(class="copy-text") All Right reserved
-				div(class="footer-social-credit")
-					div(class="footer-social")
-						a(href="#", class="footer-social__item icon icon--facebook")
-						a(href="#", class="footer-social__item icon icon--instagram")
-						a(href="#", class="footer-social__item icon icon--twitter")
-						a(href="#", class="footer-social__item icon icon--pinterest")
-					div(class="credit")
-						img(src="images/credit-min.png", alt="credit", class="credit__img")
+		include footer.pug
 		script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 		script(src="js/Wallop.min.js")
 		script(src="js/main.js")
