added placeholders to colors

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,15 +31,15 @@ html(lang="en")
 							span(class="price__number price--old") 30 000 грн
 							span(class="price__number price--new") 15 000 грн
 						div(class="price__sale") -50%
-					div(class="color")
-						span(class="color__text") Цвет: 
-						span(class="color__name") Синий
-						div(class="colors")
-							img(src="images/color1-min.png", class="color__pic", data-toggle-color)
-							img(src="images/color2-min.png", class="color__pic", data-toggle-color)
-							img(src="images/color3-min.png", class="color__pic", data-toggle-color)
-							img(src="images/color4-min.png", class="color__pic", data-toggle-color)
-							img(src="images/color5-min.png", class="color__pic", data-toggle-color)
+					div(class="swatch")
+						span(class="swatch__text") Цвет: 
+						span(class="swatch__name") Синий
+						div(class="swatches")
+							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
 					div(class="size")
 						div(class="size__info")
 							span(class="size__text") Размер:
