--- a/css/style.css
+++ b/css/style.css
@@ -548,35 +548,35 @@ html {
   text-align: center;
 }
 
-.color {
+.swatch {
   padding: 11px 0;
   border-top: 1px solid #dedede;
   font-size: 14px;
 }
 
-.color__text {
+.swatch__text {
   display: inline-block;
   margin-right: 4px;
   margin-bottom: 12px;
   font-weight: 600;
 }
 
-.color__name {
+.swatch__name {
   letter-spacing: -1px;
 }
 
-.color__pic {
+.swatch__pic {
   display: inline-block;
   width: 35px;
   height: 35px;
   margin-right: 10px;
 }
 
-.color__pic.active {
+.swatch__pic.active {
   border: 2px solid #f68235;
 }
 
-.color__pic:hover {
+.swatch__pic:hover {
   border: 2px solid #fff;
   cursor: pointer;
 }
@@ -1908,13 +1908,13 @@ html {
     font-size: 16px;
   }
 
-  .color {
+  .swatch {
     padding: 21px 20px;
     border: none;
     font-size: 12px;
   }
 
-  .color__text {
+  .swatch__text {
     margin-right: 2px;
   }
 
@@ -2336,7 +2336,6 @@ html {
   }
 
   .footer-logo {
-    float: none;
     width: 164px;
     height: 25px;
     margin: 20px auto 18px;
@@ -2607,12 +2606,12 @@ html {
     margin-top: 18px;
   }
 
-  .color {
+  .swatch {
     font-size: 12px;
     padding: 18px 0 19px;
   }
 
-  .color__text {
+  .swatch__text {
     letter-spacing: -0.6px;
   }
 
