--- a/views/header.pug
+++ b/views/header.pug
@@ -18,6 +18,7 @@ header(class="header")
 				span(class="contact__link") Войти
 			a(href="#", class="basket icon icon--shopping-cart icon--contact")
 				span(class="contact__link") Корзина
+				span(class="contact__number") 2
 		form(action="#", class="search")
 			input(type="search", placeholder="Поиск...", class="search__input")
 			button(type="submit", class="search-icon")
