--- a/views/index.pug
+++ b/views/index.pug
@@ -73,49 +73,49 @@ html(lang="en")
 							a(href="tel: +380443590899", class="call__number") +38 044 359-08-99
 						div(class="location icon icon--location-pin")
 							a(href="javascript:PopUpShow()", class="location__text") Наличие в бутиках ONE CLUB
-					div(class="details")
-						h3(class="details__title icon icon--minus") 
+					div(class="accordion")
+						h3(class="accordion__title icon icon--minus") 
 							span Описание и детали
-						dl(class="details__item")
-							dt(class="details__item-title") Состав:
-							dd(class="details__item-value") 100% трикотаж
-							dt(class="details__item-title") Сезон:
-							dd(class="details__item-value") демисезон
-							dt(class="details__item-title") Детали:
-							dd(class="details__item-value") Облегающая модель выполнена из гладкого трикотажа.
-						dl(class="details__code")
-							dt(class="details__code-title") Код товара:
-							dd(class="details__code-number") 1234-5678-8765-4321
-					div(class="details")
-						h3(class="details__title icon icon--minus") 
+						dl(class="accordion__item")
+							dt(class="accordion__item-title") Состав:
+							dd(class="accordion__item-value") 100% трикотаж
+							dt(class="accordion__item-title") Сезон:
+							dd(class="accordion__item-value") демисезон
+							dt(class="accordion__item-title") Детали:
+							dd(class="accordion__item-value") Облегающая модель выполнена из гладкого трикотажа.
+						dl(class="accordion__code")
+							dt(class="accordion__code-title") Код товара:
+							dd(class="accordion__code-number") 1234-5678-8765-4321
+					div(class="accordion")
+						h3(class="accordion__title icon icon--minus") 
 							span Измерения
-						div(class="details__item")
+						div(class="accordion__item")
 							b Размер вещи на фото:
 							| S
-						div(class="details__info")
-							p(class="details__text") Обхват груди: 85 см
-							p(class="details__text") Обхват талии: 61 см
-							p(class="details__text") Обхват бедер: 89 см
-							p(class="details__text") Рост: 175 см
-						p(class="details__text") 
+						div(class="accordion__info")
+							p(class="accordion__text") Обхват груди: 85 см
+							p(class="accordion__text") Обхват талии: 61 см
+							p(class="accordion__text") Обхват бедер: 89 см
+							p(class="accordion__text") Рост: 175 см
+						p(class="accordion__text") 
 							b Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, 
 								a(href="#") таблицей размеров
 								|, или обратитесь к нашему консультанту
-					div(class="details")
-						h3(class="details__title icon icon--minus") 
+					div(class="accordion")
+						h3(class="accordion__title icon icon--minus") 
 							span Доставка и возврат
-						div(class="details__item")
+						div(class="accordion__item")
 							b Ожидаемая дата доставки:
 							| 21.09.2016 - 23.09.2016
-						p(class="details__text") 
+						p(class="accordion__text") 
 							b Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.
-						p(class="details__text") 
+						p(class="accordion__text") 
 							b Вы можете выбрать любой удобный способ доставки:
-						p(class="details__text")
-							span(class="details__text-item") 1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.
-							span(class="details__text-item") 2. Курьером по Киеву.
-							span(class="details__text-item") 3. Сервисом доставки "Нова пошта" по всей Украине.
-						p(class="details__text") 
+						p(class="accordion__text")
+							span(class="accordion__text-item") 1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.
+							span(class="accordion__text-item") 2. Курьером по Киеву.
+							span(class="accordion__text-item") 3. Сервисом доставки "Нова пошта" по всей Украине.
+						p(class="accordion__text") 
 							b Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.
 					div(class="social social--before")
 						span(class="social__text") Поделиться
