--- a/css/style.css
+++ b/css/style.css
@@ -310,9 +310,12 @@ html {
 
 .search {
   position: relative;
+}
+
+.search-wrapper {
+  width: 221px;
   -ms-flex-item-align: end;
   align-self: flex-end;
-  width: 221px;
   margin-bottom: 11px;
 }
 
@@ -929,12 +932,12 @@ html {
   letter-spacing: 0.1px;
 }
 
-.details {
+.accordion {
   padding: 16px 0;
   border-top: 1px solid #dedede;
 }
 
-.details__title {
+.accordion__title {
   position: relative;
   margin: 0;
   margin-bottom: 24px;
@@ -944,18 +947,18 @@ html {
   letter-spacing: -0.3px;
 }
 
-.details__title:hover {
+.accordion__title:hover {
   cursor: pointer;
 }
 
-.details__title.icon--plus ~ .details__item,
-.details__title.icon--plus ~ .details__code,
-.details__title.icon--plus ~ .details__info,
-.details__title.icon--plus ~ .details__text {
+.accordion__title.icon--plus ~ .accordion__item,
+.accordion__title.icon--plus ~ .accordion__code,
+.accordion__title.icon--plus ~ .accordion__info,
+.accordion__title.icon--plus ~ .accordion__text {
   display: none;
 }
 
-.details__title::before {
+.accordion__title::before {
   position: absolute;
   top: 50%;
   right: 6px;
@@ -965,64 +968,64 @@ html {
   transform: translateY(-50%);
 }
 
-.details__title span {
+.accordion__title span {
   font-family: "HelveticaNeue", Helvetica, Arial, sans-serif;
 }
 
-.details dl.details__item {
+.accordion dl.accordion__item {
   margin: 0;
   margin-top: -5px;
 }
 
-.details__item {
+.accordion__item {
   font-size: 14px;
 }
 
-.details__item-title {
+.accordion__item-title {
   display: inline-block;
   font-weight: 600;
   letter-spacing: -0.4px;
   vertical-align: top;
 }
 
-.details__item-value {
+.accordion__item-value {
   display: inline-block;
   width: 80%;
   margin: 0;
   letter-spacing: -0.6px;
 }
 
-.details__item b {
+.accordion__item b {
   margin-right: 5px;
   font-weight: bold;
   letter-spacing: -0.5px;
 }
 
-.details__code {
+.accordion__code {
   margin-top: 20px;
   margin-bottom: 5px;
   font-size: 14px;
 }
 
-.details__code-title {
+.accordion__code-title {
   display: inline-block;
   font-weight: 600;
   letter-spacing: -0.4px;
   vertical-align: top;
 }
 
-.details__code-number {
+.accordion__code-number {
   display: inline-block;
   width: 75%;
   margin: 0;
   color: #a7a7a7;
 }
 
-.details__info {
+.accordion__info {
   margin-top: 17px;
 }
 
-.details__text {
+.accordion__text {
   margin: 0;
   margin-bottom: 1px;
   font-size: 14px;
@@ -1030,7 +1033,7 @@ html {
   letter-spacing: -0.2px;
 }
 
-.details__text b {
+.accordion__text b {
   display: inline-block;
   margin-top: 17px;
   margin-bottom: 7px;
@@ -1039,11 +1042,11 @@ html {
   letter-spacing: -0.7px;
 }
 
-.details__text b a {
+.accordion__text b a {
   color: #000;
 }
 
-.details__text-item {
+.accordion__text-item {
   display: block;
   line-height: 17px;
 }
@@ -2049,89 +2052,89 @@ html {
     letter-spacing: 0;
   }
 
-  .details {
+  .accordion {
     padding: 17px 15px 16px;
   }
 
-  .details__title {
+  .accordion__title {
     margin-bottom: 19px;
     font-size: 18px;
   }
 
-  .details dl.details__item {
+  .accordion dl.accordion__item {
     margin-left: 5px;
     line-height: 14px;
   }
 
-  .details__item {
+  .accordion__item {
     font-size: 12px;
     margin-left: 5px;
   }
 
-  .details__item-value {
+  .accordion__item-value {
     letter-spacing: -0.1px;
   }
 
-  .details__code {
+  .accordion__code {
     margin-top: 16px;
     margin-left: 5px;
     font-size: 12px;
   }
 
-  .details__code-title {
+  .accordion__code-title {
     letter-spacing: 0.1px;
   }
 
-  .details__code-number {
+  .accordion__code-number {
     width: 70%;
     letter-spacing: -0.4px;
   }
 
-  .details__info {
+  .accordion__info {
     margin-left: 5px;
     margin-top: 14px;
   }
 
-  .details__text {
+  .accordion__text {
     margin: 0;
     font-size: 12px;
     line-height: 14px;
   }
 
-  .details__text b {
+  .accordion__text b {
     padding-right: 5px;
     margin-bottom: 5px;
     letter-spacing: -0.3px;
   }
 
-  .details__text-item {
+  .accordion__text-item {
     line-height: 14px;
     margin-left: 5px;
     margin-top: 1px;
   }
 
-  .details__text-item:first-child {
+  .accordion__text-item:first-child {
     margin-top: 9px;
   }
 
-  .details__text-item:last-child {
+  .accordion__text-item:last-child {
     margin-bottom: 9px;
   }
 
-  .details:nth-last-child(2) .details__title {
+  .accordion:nth-last-child(2) .accordion__title {
     letter-spacing: 0.1px;
     margin-bottom: 21px;
   }
 
-  .details:nth-last-child(2) .details__item {
+  .accordion:nth-last-child(2) .accordion__item {
     margin-bottom: 8px;
   }
 
-  .details:nth-last-child(2) .details__item b {
+  .accordion:nth-last-child(2) .accordion__item b {
     display: block;
   }
 
-  .details:nth-last-child(2) .details__text b {
+  .accordion:nth-last-child(2) .accordion__text b {
     padding-right: 9px;
     margin-top: 8px;
     margin-left: 5px;
@@ -2719,60 +2722,60 @@ html {
     letter-spacing: -0.1px;
   }
 
-  .details {
+  .accordion {
     padding: 14px 0;
     margin-left: -7px;
   }
 
-  .details__title {
+  .accordion__title {
     margin-bottom: 18px;
     font-size: 18px;
   }
 
-  .details dl.details__item {
+  .accordion dl.accordion__item {
     margin-top: -3px;
     margin-left: 5px;
     line-height: 14px;
   }
 
-  .details__item {
+  .accordion__item {
     font-size: 12px;
     margin-left: 5px;
     margin-top: -1px;
   }
 
-  .details__code {
+  .accordion__code {
     margin-top: 16px;
     margin-left: 5px;
     font-size: 12px;
   }
 
-  .details__info {
+  .accordion__info {
     margin-top: 15px;
   }
 
-  .details__text {
+  .accordion__text {
     margin: 0;
     margin-left: 5px;
     line-height: 14px;
     font-size: 12px;
   }
 
-  .details__text b {
+  .accordion__text b {
     margin-bottom: 5px;
     padding-right: 0;
     letter-spacing: -0.5px;
   }
 
-  .details__text-item {
+  .accordion__text-item {
     line-height: 12px;
   }
 
-  .details:nth-last-child(2) .details__item b {
+  .accordion:nth-last-child(2) .accordion__item b {
     display: block;
   }
 
-  .details:nth-last-child(2) .details__text b {
+  .accordion:nth-last-child(2) .accordion__text b {
     padding-right: 10px;
   }
 
