--- a/views/index.pug
+++ b/views/index.pug
@@ -35,11 +35,11 @@ html(lang="en")
 						span(class="swatch__text") Цвет: 
 						span(class="swatch__name") Синий
 						div(class="swatches")
-							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
-							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
-							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
-							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
-							img(src="http://placehold.it/35x35", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35/636363/ffffff", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35/0a0c44/ffffff", class="swatch__pic active", data-toggle-color)
+							img(src="http://placehold.it/35/ffc66d/ffffff", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35/b30016/ffffff", class="swatch__pic", data-toggle-color)
+							img(src="http://placehold.it/35/abc850/ffffff", class="swatch__pic", data-toggle-color)
 					div(class="size")
 						div(class="size__info")
 							span(class="size__text") Размер:
